# OpenGL

./: .gitignore  CMake-VS2022.bat  CMakeLists.txt  CMakePresets.json
Dependencies/imgui-cmake/: CMakeLists.txt
OpenGL/: CMakeLists.txt
OpenGL/res/shaders/: Basic.shader
OpenGL/src/: Application.cpp  Application.h  ImGuiBuild.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OpenGL/src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
